# authorization

./: .env.example  .gitignore  Cargo.toml  go.mod  go.sum  main.go  makefile
.github/workflows/: deploy-ecs.yml  deploy-heroku.yml  deploy.yml  push-image.yml
.trvium/: Dockerfile  docker-compose.yml
db/: migrate.go  setup.go
db/migrations/: 000001_plans-table.up.sql  000002_users-table.up.sql  000003_api-keys-table.up.sql  000004_add-renewal-date-to-api-keys.down.sql  000004_add-renewal-date-to-api-keys.up.sql
handlers/: hello.go  info.go  key.go  plan.go  token.go  user.go
models/: api_keys.go  plans.go  users.go
routes/: routes.go
src/: main.rs
src/controllers/: api_key_controller.rs  mod.rs  token_controller.rs
src/services/: api_key_service.rs
src/utils/: decode_token.rs
utils/: decode_token.go  decode_token_test.go  generate_key.go  generate_key_test.go  generate_uuid.go  generate_uuid_test.go
