[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
